Excellent PID tuning

--- a/test_holoocean.ipynb
+++ b/test_holoocean.ipynb
@@ -1031,11 +1031,44 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tick: 100\n",
+      "Orientation matrix: \n",
+      "[[ 1. -0.  0.]\n",
+      " [-0. -1.  0.]\n",
+      " [ 0. -0. -1.]]\n",
+      "Pitch (deg): 0.055952909680744456 Yaw (deg): 90.00000250447816\n",
+      "Tick: 200\n",
+      "Orientation matrix: \n",
+      "[[ 1. -0.  0.]\n",
+      " [-0. -1.  0.]\n",
+      " [ 0. -0. -1.]]\n",
+      "Pitch (deg): 0.055952909680744456 Yaw (deg): 90.00000250447816\n",
+      "Tick: 300\n",
+      "Orientation matrix: \n",
+      "[[ 1. -0.  0.]\n",
+      " [-0. -1.  0.]\n",
+      " [ 0. -0. -1.]]\n",
+      "Pitch (deg): 0.055952909680744456 Yaw (deg): 90.00000250447816\n",
+      "Tick: 400\n",
+      "Orientation matrix: \n",
+      "[[ 1. -0.  0.]\n",
+      " [-0. -1.  0.]\n",
+      " [ 0. -0. -1.]]\n",
+      "Pitch (deg): 0.055952909680744456 Yaw (deg): 90.00000250447816\n"
+     ]
+    }
+   ],
    "source": [
     "import holoocean\n",
     "import numpy as np\n",
     "from pynput import keyboard\n",
+    "\n",
+    "np.set_printoptions(precision=4,suppress=True)\n",
     "\n",
     "pressed_keys = list()\n",
     "force = 25\n",
@@ -1069,6 +1102,14 @@
     "        command[[4,7]] -= val\n",
     "        command[[5,6]] += val\n",
     "\n",
+    "    if 'u' in keys:\n",
+    "        command[[0,1]] += val\n",
+    "        command[[2,3]] -= val\n",
+    "\n",
+    "    if 'o' in keys:\n",
+    "        command[[0,1]] -= val\n",
+    "        command[[2,3]] += val\n",
+    "\n",
     "    if 'w' in keys:\n",
     "        command[4:8] += val\n",
     "    if 's' in keys:\n",
@@ -1087,7 +1128,7 @@
     "\n",
     "with holoocean.make(\"SimpleUnderwater-Hovering\", gl_version=gl_version) as env:\n",
     "    env.set_render_quality(1)\n",
-    "    \n",
+    "    i = 0\n",
     "    while True:\n",
     "        if 'q' in pressed_keys:\n",
     "            break\n",
@@ -1095,7 +1136,18 @@
     "\n",
     "        #send to holoocean\n",
     "        env.act(\"auv0\", command)\n",
-    "        state = env.tick()"
+    "        state = env.tick()\n",
+    "\n",
+    "        i+=1\n",
+    "        if i % 100 == 0:\n",
+    "            print(f'Tick: {i}')\n",
+    "            print(f'Orientation matrix: \\n{state[\"PoseSensor\"][0:3,0:3]}')\n",
+    "            fx = state[\"PoseSensor\"][0,0]\n",
+    "            fy = state[\"PoseSensor\"][0,1]\n",
+    "            uz = state[\"PoseSensor\"][2,2]\n",
+    "            yaw = np.arctan2(fx, fy)\n",
+    "            pitch = np.arccos(-uz)\n",
+    "            print(f'Pitch (deg): {pitch*180/np.pi} Yaw (deg): {yaw*180/np.pi}')"
    ]
   }
  ],
