--- a/advanced_test_holoocean.ipynb
+++ b/advanced_test_holoocean.ipynb
@@ -85,8 +85,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "holo-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
